[package]
name = "mochi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
redis = { version = "0.22.3", features = ["tokio-comp"] }
futures = "0.3.28"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tokio-tungstenite = { version = "0.17.2", features = ["rustls"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
querystring = "1.1.0"
